# addon-field-remesher

./: README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish-extensions.yml  release.yml
field-remesher/: CHANGELOG.md  COMPAT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SPEC.md
field-remesher/LICENSES/: LICENSE-instant-meshes.txt
field-remesher/addon/field_remesher/: __init__.py  blender_manifest.toml  preferences.py  properties.py  ui.py
field-remesher/addon/field_remesher/backend/: __init__.py  instant_backend.py  quadriflow_backend.py
field-remesher/addon/field_remesher/ops/: preset_ops.py  remesh.py
field-remesher/addon/field_remesher/util/: context.py  metrics.py  transfer.py
field-remesher/docs/: CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  METRICS.md  PROJECT_STRUCTURE.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  github_backlog.csv
field-remesher/native/: CMakeLists.txt  README.md
field-remesher/native/src/: bindings.cpp  im_wrapper.cpp  im_wrapper.h
field-remesher/scripts/: build_native.py  bump_version.py  package_addon.py  smoke_test.py
